--- a/.env
+++ b/.env
@@ -10,3 +10,12 @@ DB_PORT=5432
 DB_SCHEMA=app
 
 SERVER_PORT=8081
+
+JWT_SECRET_BASE64=c3ByaW5nLWJvb3Qtc2VjcmV0LXNlZWQta2V5LXNob3VsZC1iZS1sb25nIQ==
+JWT_ISSUER=vigilancia
+JWT_EXP_SECONDS=3600
+
+SECURITY_CORS_ALLOWED_ORIGINS=http://localhost:4200
+SECURITY_CORS_ALLOWED_METHODS=GET,POST,PUT,PATCH,DELETE,OPTIONS
+SECURITY_CORS_ALLOWED_HEADERS=Authorization,Content-Type,Accept
+SECURITY_CORS_ALLOW_CREDENTIALS=true
