--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,15 @@ security:
     secret: ${JWT_SECRET_BASE64:c3ByaW5nLWJvb3Qtc2VjcmV0LXNlZWQta2V5LXNob3VsZC1iZS1sb25nIQ==}
     issuer: ${JWT_ISSUER:vigilancia}
     expiration: ${JWT_EXP_SECONDS:3600}
+  cors:
+    # Separe múltiplas origens por vírgula. Ex.: http://localhost:4200,https://app.seudominio.gov.br
+    allowed-origins: ${SECURITY_CORS_ALLOWED_ORIGINS:http://localhost:4200}
+    # Métodos HTTP permitidos nas requisições CORS
+    allowed-methods: ${SECURITY_CORS_ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
+    # Cabeçalhos permitidos nas requisições CORS
+    allowed-headers: ${SECURITY_CORS_ALLOWED_HEADERS:Authorization,Content-Type,Accept}
+    # Permite envio de credenciais (cookies/Authorization). Para front Angular com JWT no header, pode ser true.
+    allow-credentials: ${SECURITY_CORS_ALLOW_CREDENTIALS:true}
 
 ---
 # Dev profile overrides
