--- a/.env
+++ b/.env
@@ -19,3 +19,16 @@ SECURITY_CORS_ALLOWED_ORIGINS=http://localhost:4200
 SECURITY_CORS_ALLOWED_METHODS=GET,POST,PUT,PATCH,DELETE,OPTIONS
 SECURITY_CORS_ALLOWED_HEADERS=Authorization,Content-Type,Accept
 SECURITY_CORS_ALLOW_CREDENTIALS=true
+
+# Email (Mailhog/SMTP local por padrão). Altere para SMTP real em produção
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_SMTP_AUTH=false
+MAIL_SMTP_STARTTLS=false
+MAIL_FROM=no-reply@local
+
+# URL da tela do Frontend para nova senha (Angular)
+# O backend adicionará ?token=xxxxx automaticamente
+APP_FRONTEND_RESET_URL=http://localhost:4200/new-password
