--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // OpenAPI/Swagger (springdoc) - UI e geração do contrato OpenAPI 3
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
