--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,17 @@ spring:
     locations: classpath:db/migration
     default-schema: ${DB_SCHEMA:app}
     schemas: ${DB_SCHEMA:app}
+  mail:
+    host: ${MAIL_HOST:localhost}
+    port: ${MAIL_PORT:1025}
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
+    properties:
+      mail:
+        smtp:
+          auth: ${MAIL_SMTP_AUTH:false}
+          starttls:
+            enable: ${MAIL_SMTP_STARTTLS:false}
 
 server:
   port: ${SERVER_PORT:8081}
@@ -43,6 +54,12 @@ logging:
     org.springframework.security.authentication: DEBUG
     org.hibernate.SQL: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: WARN
+
+app:
+  frontend:
+    reset-password-url: ${APP_FRONTEND_RESET_URL:http://localhost:4200/new-password}
+  mail:
+    from: ${MAIL_FROM:no-reply@local}
 
 security:
   jwt:
