Vigilância Criação de END POINTS Usuario e MINIO

--- a/.env
+++ b/.env
@@ -32,3 +32,11 @@ MAIL_FROM=no-reply@local
 # URL da tela do Frontend para nova senha (Angular)
 # O backend adicionará ?token=xxxxx automaticamente
 APP_FRONTEND_RESET_URL=http://localhost:4200/new-password
+
+# MinIO
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=vigilancia
+MINIO_USE_SSL=false
+MINIO_URL_EXP_MINUTES=30
