--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    // MinIO SDK
+    implementation 'io.minio:minio:8.5.11'
+
     // Application runtime JDBC driver
     runtimeOnly 'org.postgresql:postgresql'
     
